adding tests and fixing api bug